Fix css nav element width, Fix referer not showing in stats

--- a/website/static_source/style/main.source.css
+++ b/website/static_source/style/main.source.css
@@ -68,9 +68,7 @@ nav a.active {
 @media (min-width: 351px) {
     nav a {
         /*noinspection CssInvalidPropertyValue*/
-        width: -webkit-fill-available;
-        width: available;
-        width: -moz-available;
+        width: 100%;
         max-width: 320px;
     }
 
